--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input type="email" id="Email" class="EmailId" name="Email"><br>
         <small id="EmailError"></small>
         <br>
+        <input type="hidden" id="Unique_Id">
         <input type="submit" name="Submit" id="submit" value="Add Row">
     </form>
     <div id="root"></div>
